--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
   <link href="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
 
+  <style>
+    .content {
+      max-width: 1200px !important; /* Change this to adjust the maximum width */
+    }
+  </style>
+
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
 </head>
 <body>
