--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
-  <link href="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
 
   <style>
     .content {
-      max-width: 2000px !important; /* Change this to adjust the maximum width */
+      max-width: 1200px !important; /* Change this to adjust the maximum width */
     }
   </style>
 
@@ -48,19 +47,6 @@
     // Add your custom plugin code here
     window.$docsify.plugins = [].concat(function (hook, vm) {
       hook.doneEach(function() {
-        var allImages = Array.prototype.slice.call(document.querySelectorAll('.markdown-section img'));
-
-        allImages.forEach(function(img) {
-          img.style.cursor = 'zoom-in';
-
-          img.addEventListener('click', function() {
-            $.featherlight('<img src="' + img.src + '">', {
-              closeIcon: '',
-              type: 'html'
-            });
-          });
-        });
-
         var markdownSection = document.querySelector('.markdown-section');
         markdownSection.addEventListener('click', function(e) {
           var target = e.target;
@@ -69,10 +55,20 @@
 
             if (href.startsWith('http') && (href.endsWith('.png') || href.endsWith('.jpg') || href.endsWith('.jpeg') || href.endsWith('.gif'))) {
               e.preventDefault();
-              $.featherlight('<img src="' + href + '">', {
-                closeIcon: '',
-                type: 'html'
-              });
+
+              // Check if image div already exists
+              var nextSibling = target.nextSibling;
+              if (nextSibling && nextSibling.classList && nextSibling.classList.contains('injected-img')) {
+                // If the image div already exists, remove it (toggle behavior)
+                nextSibling.remove();
+              } else {
+                // Otherwise, create the image div and insert it after the link
+                var div = document.createElement('div');
+                div.classList.add('injected-img');
+                div.style.margin = '10px 0';
+                div.innerHTML = '<img src="' + href + '" style="max-width: 100%;">';
+                target.parentNode.insertBefore(div, target.nextSibling);
+              }
             }
           }
         });
@@ -80,10 +76,8 @@
     }, window.$docsify.plugins);
   </script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="//unpkg.com/docsify-copy-code"></script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <script src="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="//unpkg.com/docsify/lib/plugins/ga.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-python.js"></script>
