--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
 
   <style>
-    .content {
+    .markdown-section {
       max-width: 2000px !important; /* Change this to adjust the maximum width */
     }
   </style>
