--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </style>
 
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/mark.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
@@ -88,3 +89,5 @@
 
 </body>
 </html>
+
+
