--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>OpenPecha development guidelines</title>
   <!-- <link rel="icon" href="_assets/favicon.ico"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
 
   <style>
     .markdown-section {
-      max-width: 2000px !important; /* Change this to adjust the maximum width */
+      max-width: 2000px !important;
+      /* Change this to adjust the maximum width */
     }
+
     .search-keyword {
-        background-color: yellow; /* Highlight color for search keyword */
+      background-color: yellow;
+      /* Highlight color for search keyword */
     }
   </style>
 
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
 </head>
+
 <body>
   <div id="app"></div>
   <script>
@@ -50,47 +56,46 @@
 
     // Plugin to highlight search keywords
     window.$docsify.plugins = [].concat(function (hook, vm) {
-        var KEYWORD_HIGHLIGHT_CLASS = 'search-keyword';  // The CSS class to apply to highlighted keywords
-        var keyword = '';
+      var KEYWORD_HIGHLIGHT_CLASS = 'search-keyword';  // The CSS class to apply to highlighted keywords
+      var keyword = '';
 
-        // Function to remove previous highlights
-        function removePreviousHighlights() {
-            var previouslyHighlighted = Array.from(document.getElementsByClassName(KEYWORD_HIGHLIGHT_CLASS));
-            previouslyHighlighted.forEach(function (element) {
-                // Replace the highlighted element with its own contents (i.e., remove the highlight)
-                element.replaceWith(...element.childNodes);
-            });
-        }
-
-        // Function to highlight keyword in content
-        function highlightKeywordInContent() {
-            var contentElements = Array.from(document.querySelectorAll('.markdown-section'));
-            var regex = new RegExp('('+keyword+')', 'gi');
-            contentElements.forEach(function (element) {
-                element.innerHTML = element.innerHTML.replace(regex, '<span class="'+KEYWORD_HIGHLIGHT_CLASS+'">$1</span>');
-            });
-        }
-
-        hook.afterEach(function (html, next) {
-            if (keyword) {
-                var regex = new RegExp('('+keyword+')', 'gi');
-                html = html.replace(regex, '<span class="'+KEYWORD_HIGHLIGHT_CLASS+'">$1</span>');
-            }
-            next(html);
+      // Function to remove previous highlights
+      function removePreviousHighlights() {
+        var previouslyHighlighted = Array.from(document.getElementsByClassName(KEYWORD_HIGHLIGHT_CLASS));
+        previouslyHighlighted.forEach(function (element) {
+          // Replace the highlighted element with its own contents (i.e., remove the highlight)
+          element.replaceWith(...element.childNodes);
         });
+      }
 
-        hook.doneEach(function () {
-            var searchBar = document.querySelector('.search input[type="text"]');
-            if (searchBar) {
-                searchBar.addEventListener('change', function () {
-                    removePreviousHighlights();
-                    keyword = this.value;
-                    highlightKeywordInContent();
-                });
-            }
+      // Function to highlight keyword in content
+      function highlightKeywordInContent() {
+        var contentElements = Array.from(document.querySelectorAll('.markdown-section'));
+        var regex = new RegExp('(' + keyword + ')', 'gi');
+        contentElements.forEach(function (element) {
+          element.innerHTML = element.innerHTML.replace(regex, '<span class="' + KEYWORD_HIGHLIGHT_CLASS + '">$1</span>');
         });
+      }
+
+      hook.mounted(function () {
+        var searchBar = document.querySelector('.search input[type="text"]');
+        if (searchBar) {
+          searchBar.addEventListener('input', function () {
+            keyword = this.value;
+          });
+        }
+      });
+
+      hook.afterRender(function () {
+        removePreviousHighlights();
+        if (keyword) {
+          highlightKeywordInContent();
+        }
+      });
+
     }, window.$docsify.plugins || []);
-    
+
+
   </script>
 
   <script src="//unpkg.com/docsify-copy-code"></script>
@@ -102,4 +107,5 @@
   <!-- plugins -->
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
 </body>
+
 </html>
