--- a/index.html
+++ b/index.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>OpenPecha development guidelines</title>
   <!-- <link rel="icon" href="_assets/favicon.ico"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
 
   <style>
     .markdown-section {
-      max-width: 2000px !important;
-      /* Change this to adjust the maximum width */
-    }
-
-    .search-keyword {
-      background-color: yellow;
-      /* Highlight color for search keyword */
+      max-width: 2000px !important; /* Change this to adjust the maximum width */
     }
   </style>
 
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
 </head>
-
 <body>
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'Tibetan Fonts',
+      name: 'Derge Katen',
       repo: 'https://github.com/ngawangtrinley/katen',
       coverpage: false,
       loadSidebar: true,
@@ -44,57 +35,45 @@
       ga: 'UA-145106145-1',
 
       search: {
-        maxAge: 86400000, // Expiration time, the default one day
-        paths: 'auto', // or 'auto'
-        placeholder: 'Type to search',
-        hideOtherSidebarContent: true,
-        depth: 6
-      },
+      maxAge: 86400000, // Expiration time, the default one day
+      paths: 'auto', // or 'auto'
+      placeholder: 'Type to search',
+      hideOtherSidebarContent: true,
+      depth: 6},
 
       plugins: [EditOnGithubPlugin.create('https://github.com/ngawangtrinley/katen/blob/main/')],
     }
 
-    // Plugin to highlight search keywords
+    // Add your custom plugin code here
     window.$docsify.plugins = [].concat(function (hook, vm) {
-      var KEYWORD_HIGHLIGHT_CLASS = 'search-keyword';  // The CSS class to apply to highlighted keywords
-      var keyword = '';
+      hook.doneEach(function() {
+        var markdownSection = document.querySelector('.markdown-section');
+        markdownSection.addEventListener('click', function(e) {
+          var target = e.target;
+          if (target.tagName === 'A') {
+            var href = target.getAttribute('href');
 
-      // Function to remove previous highlights
-      function removePreviousHighlights() {
-        var previouslyHighlighted = Array.from(document.getElementsByClassName(KEYWORD_HIGHLIGHT_CLASS));
-        previouslyHighlighted.forEach(function (element) {
-          // Replace the highlighted element with its own contents (i.e., remove the highlight)
-          element.replaceWith(...element.childNodes);
-        });
-      }
+            if (href.startsWith('http') && (href.endsWith('.png') || href.endsWith('.jpg') || href.endsWith('.jpeg') || href.endsWith('.gif'))) {
+              e.preventDefault();
 
-      // Function to highlight keyword in content
-      function highlightKeywordInContent() {
-        var contentElements = Array.from(document.querySelectorAll('.markdown-section'));
-        var regex = new RegExp('(' + keyword + ')', 'gi');
-        contentElements.forEach(function (element) {
-          element.innerHTML = element.innerHTML.replace(regex, '<span class="' + KEYWORD_HIGHLIGHT_CLASS + '">$1</span>');
-        });
-      }
-
-      hook.mounted(function () {
-        var searchBar = document.querySelector('.search input[type="text"]');
-        if (searchBar) {
-          searchBar.addEventListener('input', function () {
-            keyword = this.value;
-            // Delay the keyword highlighting so it runs after search plugin
-            window.setTimeout(function () {
-              removePreviousHighlights();
-              if (keyword) {
-                highlightKeywordInContent();
+              // Check if image div already exists
+              var nextSibling = target.nextSibling;
+              if (nextSibling && nextSibling.classList && nextSibling.classList.contains('injected-img')) {
+                // If the image div already exists, remove it (toggle behavior)
+                nextSibling.remove();
+              } else {
+                // Otherwise, create the image div and insert it after the link
+                var div = document.createElement('div');
+                div.classList.add('injected-img');
+                div.style.margin = '10px 0';
+                div.innerHTML = '<img src="' + href + '" style="max-width: 100%;">';
+                target.parentNode.insertBefore(div, target.nextSibling);
               }
-            }, 500); // You can adjust this delay as per your requirement
-          });
-        }
+            }
+          }
+        });
       });
-    }, window.$docsify.plugins || []);
-
-
+    }, window.$docsify.plugins);
   </script>
 
   <script src="//unpkg.com/docsify-copy-code"></script>
@@ -105,6 +84,7 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <!-- plugins -->
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
-</body>
 
+
+</body>
 </html>
