--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'Derge Katen',
+      name: 'Katen',
       repo: 'https://github.com/ngawangtrinley/katen',
       coverpage: false,
       loadSidebar: true,
@@ -44,32 +44,41 @@
       plugins: [EditOnGithubPlugin.create('https://github.com/ngawangtrinley/katen/blob/main/')],
     }
 
-    // Add your custom plugin code here
     window.$docsify.plugins = [].concat(function (hook, vm) {
       hook.doneEach(function() {
         var markdownSection = document.querySelector('.markdown-section');
-        markdownSection.addEventListener('click', function(e) {
+        var popup = null;
+        markdownSection.addEventListener('mouseenter', function(e) {
           var target = e.target;
-          if (target.tagName === 'A') {
-            var href = target.getAttribute('href');
+          if (target.tagName === 'SUP' && target.firstChild.tagName === 'A' && target.firstChild.hash.startsWith('#fn:')) {
+            // Get footnote content
+            var footnoteId = target.firstChild.hash.substring(1);
+            var footnoteElement = document.getElementById(footnoteId);
+            var footnoteContent = footnoteElement.innerHTML;
 
-            if (href.startsWith('http') && (href.endsWith('.png') || href.endsWith('.jpg') || href.endsWith('.jpeg') || href.endsWith('.gif'))) {
-              e.preventDefault();
+            // Create popup
+            popup = document.createElement('div');
+            popup.style.position = 'fixed';
+            popup.style.left = e.clientX + 'px';
+            popup.style.top = (e.clientY + 10) + 'px';
+            popup.style.background = '#fff';
+            popup.style.padding = '10px';
+            popup.style.maxWidth = '300px';
+            popup.style.border = '1px solid #000';
+            popup.style.zIndex = '1000';
+            popup.innerHTML = footnoteContent;
 
-              // Check if image div already exists
-              var nextSibling = target.nextSibling;
-              if (nextSibling && nextSibling.classList && nextSibling.classList.contains('injected-img')) {
-                // If the image div already exists, remove it (toggle behavior)
-                nextSibling.remove();
-              } else {
-                // Otherwise, create the image div and insert it after the link
-                var div = document.createElement('div');
-                div.classList.add('injected-img');
-                div.style.margin = '10px 0';
-                div.innerHTML = '<img src="' + href + '" style="max-width: 100%;">';
-                target.parentNode.insertBefore(div, target.nextSibling);
-              }
-            }
+            // Add popup to body
+            document.body.appendChild(popup);
+          }
+        });
+
+        markdownSection.addEventListener('mouseleave', function(e) {
+          var target = e.target;
+          if (target.tagName === 'SUP' && target.firstChild.tagName === 'A' && target.firstChild.hash.startsWith('#fn:') && popup) {
+            // Remove popup from body
+            document.body.removeChild(popup);
+            popup = null;
           }
         });
       });
@@ -84,7 +93,6 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <!-- plugins -->
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
-
 
 </body>
 </html>
